# ARM

./: CMakeLists.txt
doc/: Checkpoint.tex
programs/: gpio  gpio.s
programs/Faster/: faster  faster.s
programs/slow/: slow  slow.s
src/: Makefile  assemble.c  emulate.c
src/assemble_utils/: defs.h  instruction_assembler.c  instruction_assembler.h  utils.c  utils.h
src/emulate_utils/: decode.c  decode.h  defs.h  execute.c  execute.h  utils.c  utils.h
src/extension/: Makefile  ball.c  ball.h  main  main.c  sticks.c  sticks.h  utils.c  utils.h
